<resources>
    <string name="app_name">QREditor</string>
    <string name="create_button">Create your QR Code</string>
    <string name="url_start">http://</string>
    <string name="send_to">send to</string>
    <string name="welcome">Welcome, choose what you want to code:</string>
    <string name="add">Add contact from phone book</string>
    <string name="sms">SMS</string>
    <string name="text">Text</string>
    <string name="url">URL</string>
    <string name="web">Web site</string>
    <string name="wifi">Wi-Fi Connection</string>
    <string name="phone">Phone number</string>
    <string name="vcard">Business card</string>
    <string name="next">NEXT</string>
    <string name="name">Name</string>
    <string name="comp">Company</string>
    <string name="tit">Title</string>
    <string name="mail">Email</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="pc">Postal Code</string>
    <string name="country">Country</string>
    <string name="note">Note</string>
    <string name="choose">Choose colors for gradient</string>
    <string name="stcl">Start Color</string>
    <string name="encl">End Color</string>
    <string name="frcl">Set front color</string>
    <string name="bkcl">Set back color</string>
    <string name="grad">Set gradient</string>
    <string name="or">or just change colors of layers</string>
    <string name="or2">OR you could</string>
    <string name="desc">QR code pic</string>
    <string name="photo">Set photo</string>
    <string name="save">Save QR Code</string>
    <string name="share">Share QR Code</string>
    <string name="mess">Your message</string>
    <string name="put">Put your text here</string>
    <string name="ssid">SSID</string>
    <string name="pass">Password</string>
    <string name="success">SUCCESS!</string>
    <string name="err">Change error correction level</string>
    <string name="cust">Customize your QR Code</string>
</resources>
