<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karakelyan.QREditor.MainActivity">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"/>

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp" >

        <RadioButton
            android:id="@+id/viz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vcard"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/wi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            android:padding="10dp"
            />

        <RadioButton
            android:id="@+id/tele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:padding="10dp"
            />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/crbtn"
        android:onClick="onClick"/>

</LinearLayout>
</ScrollView>

