<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.karakelyan.QREditor.CustomizeActivity">
<RelativeLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
        <TextView
            android:id="@+id/txtm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textSize="18sp"
            android:textAlignment="center"/>
        <TableLayout
            android:id="@+id/btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtm"
            android:padding="5dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <Button
                            android:id="@+id/startcl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/stcl"
                            android:layout_weight="0.5"/>

                        <Button
                            android:id="@+id/endcl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/encl" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/refr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/grad"
                            android:layout_weight="1"/>
                </TableRow>

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="18sp"
                    android:textAlignment="center"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/frontcl"
                            android:text="@string/frcl"
                            android:layout_weight="0.5"/>
                        <Button
                            android:layout_weight="0.5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/backcl"
                            android:text="@string/bkcl" />
                </TableRow>
        </TableLayout>


        <ImageView
            android:id="@+id/imgv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btns"
            android:contentDescription="@string/desc"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtm2"
            android:layout_below="@+id/imgv"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:text="@string/or2"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/setphoto"
            android:layout_below="@id/txtm2"
            android:layout_marginBottom="5dp"
            android:text="@string/photo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:layout_below="@id/setphoto"
            android:layout_marginBottom="5dp"
            android:text="@string/save"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSave"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:text="@string/share"/>
</RelativeLayout>
        </ScrollView>

