<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.karakelyan.QREditor.WiActivity">

    <TextView
        android:id="@+id/txtV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:padding="20dp"/>

    <EditText
        android:id="@+id/sid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ssid"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword"
        android:hint="@string/pass"/>


    <Spinner
        android:id="@+id/nettype"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/btnCreate"
        android:text="@string/create_button"
        android:onClick="onClickQR"/>

</LinearLayout>
